--- a/src/main/webapp/resources/style/proposal/post.css
+++ b/src/main/webapp/resources/style/proposal/post.css
@@ -6,11 +6,11 @@
 
 .container{
    
-    margin-top: 40px;
-   border:1px solid var(--COLOR-BORDER);
+    margin: 40px;
+   	border:1px solid var(--COLOR-BORDER);
     border-radius: 12px;
     box-sizing: border-box;
-   box-shadow: 4px 4px 4px rgba(236, 240, 241, 0.5);
+   	box-shadow: 4px 4px 4px rgba(236, 240, 241, 0.5);
     min-height: 200px;
     min-width: 200px;
 
@@ -26,23 +26,31 @@
    
 }
 
-.ProposalTitle{
-    font-size:20px;
+.title{
+	margin-top:-10px;
 }
 
-.detail{
-     
+.proposalTitle{
+	margin-top:-15px;
+	margin-bottom:10px;
+    font-size:25px;
+}
+
+.date{
+    margin-left:50px;
     font-size: 15px;
 }
 
 .hashtag{
     margin-left: 80%;
+    font-size:10px;
      
 }
 
 
 .view_content{
-    height:700px ;
+    height:700px;
+    margin: 30px;
     border-bottom: 1px solid var(--COLOR-BORDER);
 }
 
@@ -52,6 +60,7 @@
     background-color:#F0F0F0;
     border-radius: 12px;
     padding: 25px 100px ;
+    border:0px; 
 }
 
 .sug{
@@ -80,6 +89,8 @@ padding :15px;
 }
 
 .reg{
-    margin-right: 10px;
-   
+   margin-right: 10px;
+   margin-left: 90%;  
+   border:0px; 
+   background-color: #F0F0F0;
 }
