2월7일 오전 9시 맴버

--- a/src/main/webapp/resources/style/member/memberJoinus.css
+++ b/src/main/webapp/resources/style/member/memberJoinus.css
@@ -3,7 +3,7 @@
 	width: 100%;
 	height: auto;
 	overflow: hidden;
-	background-color: #EEEEEE;
+	background-color: #ffffff;
 	overflow: hidden;
 }
 .box-white {
