--- a/src/main/webapp/resources/style/member/memberSearchId.css
+++ b/src/main/webapp/resources/style/member/memberSearchId.css
@@ -2,7 +2,7 @@
 .bg-color {
 	width: 100%;
 	height: 100vh;
-	background-color: #EEEEEE;
+	background-color: #ffffff;
 	overflow: hidden;
 }
 .box-white {
