--- a/src/main/webapp/resources/style/member/memberSearchIdResult.css
+++ b/src/main/webapp/resources/style/member/memberSearchIdResult.css
@@ -2,12 +2,12 @@
 .bg-color {
 	width: 100%;
 	height: 100vh;
-	background-color: #EEEEEE;
+	background-color: #ffffff;
 	overflow: hidden;
 }
 .box-white {
 	margin: 10% auto;
-	width: 500px;
+	width: 400px;
 	background-color: white;
 	padding: 40px;
 }
@@ -27,40 +27,55 @@
 	font-size: 18px;
 	color: #2A2A2A;
 }
-.tab-search>a:last-child::after {
+.tab-search>a:first-child::after {
 	content: "";
 	display: block;
 	width: 100%;
 	height: 3.5px;
-	background-color: white;
+	background-color: #ffffff;
 	margin-top: 15px;
 }
 
-.input-style {
-	width: 100%;	
-}
-input[type="email"] {
-	margin-top: 20px;
-	margin-bottom: 40px;
+.box-result>p {
+	font-family: 'Noto Sans KR', sans-serif;
+	font-size: 16px;
+	color: #2A2A2A;
+	margin-bottom: 30px;
 }
 
-.btn-searchPwd {
+.box-userInfo {
+	width: 100%;
+	height: 90px;
+	border: 0.5px solid #D8D8D8;
+	text-align: center;
+	line-height: 90px;
+	font-family: 'Noto Sans KR', sans-serif;
+	margin-bottom: 30px;
+}
+#userId {
+	font-size: 16px;
+	color: #2A2A2A;
+	padding-right: 50px;
+}
+#enrollDate {
+	font-size: 12px;
+	color: #C8C8C8;
+}
+
+.btn-login {
 	width: 100%;
 	height: 55px;
 	background-color: #9af3ed;
-	font-family: 'Noto Sans KR', sans-serif;
-	font-size: 16px;
-	color: white;
 	border: none;
 	border-radius: 50px;
 	cursor: pointer;
-	margin-bottom: 20px;
 }
-
-.box-white>a {
+.btn-login>a {
 	display: block;
-	text-align: center;
+	width: 100%;
+	height: 100%;
+	line-height: 55px;
 	font-family: 'Noto Sans KR', sans-serif;
 	font-size: 16px;
-	color: #707070;
+	color: white;
 }
