--- a/src/main/webapp/resources/style/member/memberLogin.css
+++ b/src/main/webapp/resources/style/member/memberLogin.css
@@ -26,7 +26,7 @@
 	width: 100%;
 	height: 40px;
 	border: none;
-	border-bottom: 1px solid #2A2A2A;
+	border-bottom: 1px solid #000000;
 	font-family: 'Noto Sans KR', sans-serif;
 	font-size: 19px;
 	color: #2A2A2A;
@@ -72,8 +72,8 @@
 	display: inline-block;
 	height: 20px;
 	font-family: 'Noto Sans KR', sans-serif;
-	font-size: 16px;
-	color: #707070;
+	font-size: 20px;
+	color: #000000;
 }
 .link-search>a:first-child {
 	margin-bottom: 20px;
