--- a/src/main/webapp/resources/style/proposal/post.css
+++ b/src/main/webapp/resources/style/proposal/post.css
@@ -43,8 +43,13 @@
 
 .hashtag{
     margin-left: 80%;
-    font-size:10px;
+    font-size:20px;
      
+}
+
+.adminCon{
+	margin-lift : 70%;
+	
 }
 
 
