--- a/src/main/webapp/resources/style/member/memberLogin.css
+++ b/src/main/webapp/resources/style/member/memberLogin.css
@@ -29,17 +29,17 @@
 	border-bottom: 1px solid #000000;
 	font-family: 'Noto Sans KR', sans-serif;
 	font-size: 19px;
-	color: #2A2A2A;
+	color: #000000;
 }
 
 .btn-submit {
 	margin-top: 50px;
 	width: 100%;
 	height: 55px;
-	background-color: #a6ffff;
+	background-color: #ffffff;
 	font-family: 'Noto Sans KR', sans-serif;
 	font-size: 16px;
-	color: white;
+	color: #000000;
 	border: none;
 	border-radius: 50px;
 	cursor: pointer;
@@ -49,7 +49,7 @@
 	margin-top: 20px;
 	width: 100%;
 	height: 55px;
-	background-color: #9af3ed;
+	background-color: #ffffff;
 	border: none;
 	border-radius: 50px;
 	cursor: pointer;
@@ -61,7 +61,7 @@
 	line-height: 55px;
 	font-family: 'Noto Sans KR', sans-serif;
 	font-size: 16px;
-	color: white;
+	color: #000000;
 }
 
 .link-search {
@@ -69,7 +69,6 @@
 	text-align: center;
 }
 .link-search>a {
-	display: inline-block;
 	height: 20px;
 	font-family: 'Noto Sans KR', sans-serif;
 	font-size: 20px;
