--- a/src/main/webapp/resources/style/member/myPageWithdraw.css
+++ b/src/main/webapp/resources/style/member/myPageWithdraw.css
@@ -40,7 +40,7 @@ input[type="checkbox"] {
 }
 
 .btn-m {
-	background-color: #FF6464;
+	background-color: #80ffff;
 }
 .user-info div:last-child {
 	display: flex;
