--- a/src/main/webapp/resources/style/member/common.css
+++ b/src/main/webapp/resources/style/member/common.css
@@ -121,7 +121,7 @@ textarea {
 	width: 120px;
 	height: 50px;
 	border: 0;
-	background-color: #AFD485;
+	background-color: #9af3ed;
 	font-family: 'Noto Sans KR', sans-serif;
 	font-size: 16px;
 	color: #ffffff;
