--- a/src/main/webapp/resources/style/member/memberJoinSuccess.css
+++ b/src/main/webapp/resources/style/member/memberJoinSuccess.css
@@ -43,7 +43,7 @@
 .btn-goHome {
 	width: 100%;
 	height: 55px;
-	background-color: #5EB656;
+	background-color: #9af3ed;
 	border: none;
 	border-radius: 50px;
 	cursor: pointer;
